2009-09-06 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp, midiarp.cpp, seqdriver.cpp, passwidget.cpp: 
	MIDI controller for muting arps implemented. The controller for the
	first arp can be configured in the settings tab, the other arps in 
	row are the following CC numbers. When the corresponding CC with
	value 127 is received, the arp mute state is toggled.
	* qmidiarp_*.ts: translations updated, obsoletes left atm

2009-09-03 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: new Arp pulldown menu, keyboard shortcuts added
	* qmidiarp_*.ts: translations updated, obsoletes left atm

2009-08-29 Frank Kober <goemusic@yahoo.fr>
	* gui.* removed
	* mainwindow.cpp, mainwindow.h: created, containing MainWindow
	class, all Gui elements moved to MainWindow

2009-08-25 Frank Kober <goemusic@yahoo.fr>
	* midiarp.cpp: Queue start with empty pattern fixed 
2009-08-25 Frank Kober <goemusic@yahoo.fr>
	* gui.cpp, main.h: automatic filename extension added
	* gui.*, main.cpp: save and save As support added
	* gui.cpp: qt4 port error in removeArp(int index) hopefully fixed 
	(affecting load() when one of the three settings tabs was active)
	* gui.cpp, main.cpp: buttonBox toolbar gets attached to top widget
	* seqdriver.cpp: fixed FootSwitch event that still got copied to unmatched
	* passwidget.cpp: port numbers really starting at 1 now
	* known issue: Queue start when pattern empty but arp present

2009-08-23 Frank Kober <goemusic@yahoo.fr>
	* qmidiarp_fr.ts: French translation updated
	* slider.*, groovewidget.*, arpwidget.h: Sliders improved (idea: gscholz)
	* arpwidget.cpp: random box again visible, toggle button removed
	* qmidiarp2.xpm: adjusted image position in pixmap
	* arpwidget.cpp: in/out boxes Layout improved
	* arpwidget.cpp, seqdriver.cpp: Channel and Port numbers
	starting from 1 instead of 0

2009-08-22 Guido Scholz <guido.scholz@bayernline.de>
	* arpdata.cpp arpscreen.* gui.* midiarp.* seqdriver.*: Some
	cleanups, improved string parameter handling